--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,6 @@
 <%= turbo_frame_tag "modal" do %>
-  <%= tag.div data: { controller: "turbo-modal" }, style: "padding: 30px;" do %>
+  <%= tag.div data: { controller: "turbo-modal" },
+              class: "p-5 bg-slate-300 absolute z-10 top-10 right-10 rounded-md w-96 break-words do %>
     <h1 class="font-bold text-4xl">Editing post</h1>
 
     <%= render "form", post: @post %>
