--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "modal" do %>
-  <%# <div class="mx-auto md:w-2/3 w-full"> %>
-  <%= tag.div data: { controller: "turbo-modal" }, style: "padding: 30px;" do %>
+  <%= tag.div data: { controller: "turbo-modal" },
+              class: "p-5 bg-slate-300 absolute z-10 top-10 right-10 rounded-md w-96 break-words" do %>
     <h1 class="font-bold text-4xl">New post</h1>
 
     <%= render "form", post: @post %>
@@ -9,6 +9,5 @@
                             type: "button",
                             class: "rounded-lg py-3 px-5 bg-red-600 text-white"  %>
     <%# link_to 'Back to posts', posts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%# </div> %>
   <% end %>
 <% end %>
