--- a/app/components/turbo_modal_component.html.erb
+++ b/app/components/turbo_modal_component.html.erb
@@ -1,5 +1,9 @@
 <%= turbo_frame_tag "modal" do %>
-  <%= tag.div data: { controller: "turbo-modal", action: "turbo:submit-end->turbo-modal#submitEnd" },
+  <%= tag.div data: { controller: "turbo-modal",
+                      turbo_modal_target: "modal",
+                      action: "turbo:submit-end->turbo-modal#submitEnd
+                              keyup@window->turbo-modal#closeWithEscape
+                              click@window->turbo-modal#closeBackground" },
               class: "p-5 bg-slate-300 absolute z-10 top-10 right-10 rounded-md w-96 break-words" do %>
     <h1 class="font-bold text-4xl"><%= @title %></h1>
 
